--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "rimraf dist",
     "typings-install": "typings install",
     "setup": "npm install --no-optional && npm run typings-install",
-    "setup-demo": "npm install --no-optional angular2@2.0.0-beta.6 es6-promise@^3.0.2 es6-shim@^0.33.3 reflect-metadata@0.1.2 rxjs@5.0.0-beta.0 zone.js@0.5.14",
+    "setup-demo": "npm install --no-optional angular2@2.0.0-beta.12 es6-promise@^3.1.2 es6-shim@0.35.0 reflect-metadata@0.1.2 rxjs@5.0.0-beta.2 zone.js@^0.6.6",
     "build": "npm run clean && tsc",
     "build_demo": "tsc typings/browser.d.ts demo/main.ts demo/app_ui.ts --module commonjs -t es5 --experimentalDecorators --emitDecoratorMetadata",
     "test": "echo Not supported yet",
@@ -29,12 +29,12 @@
   },
   "homepage": "https://github.com/angular/angular-electron#readme",
   "devDependencies": {
-    "electron-prebuilt": "^0.36.7",
-    "typescript": "^1.7.5",
+    "electron-prebuilt": "^0.37.2",
+    "typescript": "^1.8.9",
     "rimraf": "^2.5.2"
   },
   "peerDependencies": {
-    "angular2": "2.0.0-beta.6"
+    "angular2": "2.0.0-beta.12"
   },
   "dependencies": {
     "parse5": "^1.5.1"
