--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf dist",
-    "typings-install": "typings install",
-    "setup": "npm install --no-optional && npm run typings-install",
+    "setup": "npm install --no-optional",
     "setup-demo": "npm install --no-optional angular2@2.0.0-beta.12 es6-promise@^3.1.2 es6-shim@0.35.0 reflect-metadata@0.1.2 rxjs@5.0.0-beta.2 zone.js@^0.6.6",
     "build": "npm run clean && tsc",
-    "build_demo": "tsc typings/browser.d.ts demo/main.ts demo/app_ui.ts --module commonjs -t es5 --experimentalDecorators --emitDecoratorMetadata",
+    "build_demo": "tsc demo/main.ts demo/app_ui.ts --module commonjs -t es5 --experimentalDecorators --emitDecoratorMetadata",
     "test": "echo Not supported yet",
     "demo": "npm run build && npm run build_demo && electron ./demo",
     "start": "npm run demo"
@@ -29,14 +28,18 @@
   },
   "homepage": "https://github.com/angular/angular-electron#readme",
   "devDependencies": {
-    "electron-prebuilt": "^0.37.2",
-    "typescript": "^1.8.9",
-    "rimraf": "^2.5.2"
+    "@types/core-js": "^0.9.34",
+    "@types/electron": "^1.4.25",
+    "@types/node": "^6.0.46",
+    "electron": "^1.4.5",
+    "rimraf": "^2.5.2",
+    "typescript": "^2.0.7"
   },
   "peerDependencies": {
     "angular2": "2.0.0-beta.12"
   },
   "dependencies": {
-    "parse5": "^1.5.1"
+    "parse5": "^1.5.1",
+    "zone.js": "^0.6.26"
   }
 }
