--- a/package.json
+++ b/package.json
@@ -5,14 +5,11 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf dist",
-    "typings-install": "typings install",
-    "setup": "npm install --no-optional && npm run typings-install",
-    "setup-demo": "npm install --no-optional angular2@2.0.0-beta.12 es6-promise@^3.1.2 es6-shim@0.35.0 reflect-metadata@0.1.2 rxjs@5.0.0-beta.2 zone.js@^0.6.6",
-    "build": "npm run clean && tsc",
-    "build_demo": "tsc typings/browser.d.ts demo/main.ts demo/app_ui.ts --module commonjs -t es5 --experimentalDecorators --emitDecoratorMetadata",
-    "test": "echo Not supported yet",
-    "demo": "npm run build && npm run build_demo && electron ./demo",
-    "start": "npm run demo"
+    "start": "yarn run build:src && yarn run bundle && yarn run demo",
+    "build:src": "ngc",
+    "build:demo": "cp -r modules/demo-app/*.{html,json} dist/demo-app",
+    "bundle": "webpack",
+    "demo": "yarn run build:demo && electron dist/demo-app"
   },
   "repository": {
     "type": "git",
