--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
-  "name": "@angular2/electron",
-  "version": "1.0.0",
-  "description": "Electron Platform for Angular2",
-  "main": "index.js",
-  "scripts": {
-    "clean": "rimraf dist",
-    "typings-install": "typings install",
-    "setup": "npm install --no-optional && npm run typings-install",
-    "setup-demo": "npm install --no-optional angular2@2.0.0-beta.12 es6-promise@^3.1.2 es6-shim@0.35.0 reflect-metadata@0.1.2 rxjs@5.0.0-beta.2 zone.js@^0.6.6",
-    "build": "npm run clean && tsc",
-    "build_demo": "tsc typings/browser.d.ts demo/main.ts demo/app_ui.ts --module commonjs -t es5 --experimentalDecorators --emitDecoratorMetadata",
-    "test": "echo Not supported yet",
-    "demo": "npm run build && npm run build_demo && electron ./demo",
-    "start": "npm run demo"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/angular/angular-electron.git"
-  },
-  "keywords": [
-    "Angular2",
-    "Electron"
-  ],
-  "author": "Rob Wormald <robwormald@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/angular/angular-electron/issues"
-  },
-  "homepage": "https://github.com/angular/angular-electron#readme",
-  "devDependencies": {
-    "electron-prebuilt": "^0.37.2",
-    "typescript": "^1.8.9",
-    "rimraf": "^2.5.2"
-  },
-  "peerDependencies": {
-    "angular2": "2.0.0-beta.12"
-  },
-  "dependencies": {
-    "parse5": "^1.5.1"
-  }
+    "name": "@angular2/electron",
+    "version": "1.0.0",
+    "description": "Electron Platform for Angular2",
+    "main": "index.js",
+    "scripts": {
+        "clean": "rimraf dist",
+        "typings-install": "typings install",
+        "setup": "npm install --no-optional && npm run typings-install",
+        "setup-demo": "npm install --no-optional angular2@2.0.0-beta.12 es6-promise@^3.1.2 es6-shim@0.35.0 reflect-metadata@0.1.2 rxjs@5.0.0-beta.2 zone.js@^0.6.6",
+        "build": "npm run clean && tsc",
+        "build_demo": "tsc typings/browser.d.ts demo/main.ts demo/app_ui.ts --module commonjs -t es5 --experimentalDecorators --emitDecoratorMetadata",
+        "test": "echo Not supported yet",
+        "demo": "npm run build && npm run build_demo && electron ./demo",
+        "start": "npm run demo"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/angular/angular-electron.git"
+    },
+    "keywords": [
+        "Angular2",
+        "Electron"
+    ],
+    "author": "Rob Wormald <robwormald@gmail.com>",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/angular/angular-electron/issues"
+    },
+    "homepage": "https://github.com/angular/angular-electron#readme",
+    "devDependencies": {
+        "electron-prebuilt": "^0.37.2",
+        "typescript": "^1.8.9",
+        "typings": "^0.8.1",
+        "rimraf": "^2.5.2"
+    },
+    "peerDependencies": {
+        "angular2": "2.0.0-beta.12"
+    },
+    "dependencies": {
+        "parse5": "^1.5.1"
+    }
 }
