build(package): reinit package description

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,32 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "es5",
-        "noImplicitAny": false,
-        "sourceMap": false,
-		"experimentalDecorators": true,
-		"emitDecoratorMetadata": true,
-		"outDir": "dist",
-		"declaration": true,
-		"moduleResolution": "node"
-    },
-    "files": [
-		"typings/browser.d.ts",
-		"./src/renderer.ts",
-		"./src/main.ts"
-	]
+  "compilerOptions": {
+    "preserveConstEnums": true,
+    "sourceMap": true,
+    "declaration": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "strictNullChecks": true,
+    "noUnusedLocals": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noEmitHelpers": true,
+    "noUnusedParameters": true,
+    "importHelpers": true,
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "target": "es5",
+    "outDir": "dist",
+    "lib": [
+      "es2016",
+      "dom"
+    ]
+  },
+  "include": [
+    "src/**/*",
+    "spec/**/*"
+  ],
+  "formatCodeOptions": {
+    "indentSize": 2,
+    "tabSize": 2
+  }
 }
